# Agent-os-open

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_EN.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_LICENSES_FRONTEND.csv  _run_log.txt  check_docker.ps1  cleanup_processes.ps1  cli_cn.bat  docker-compose.yml  eval_report_semantic_check.md  install.sh  install_cn.bat  install_native_docker.bat  install_wsl_docker.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  restart_docker.ps1  run.py  setup_backend.ps1  start_web.sh  start_web_cn.bat  stop_web.sh  update_frontend.ps1  (+5 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  frontend-baseline.txt  known-skipped-tests.txt  test-batch-baseline.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.zcode/plans/: plan-sess_4378d2ea-b1c3-4702-ab50-0753f57ec298.md  plan-sess_51ccd868-fff6-454c-954a-d7eeb94e3c7e.md  plan-sess_56c9d571-21f5-4347-9b4f-98e309191f5f.md  plan-sess_859ba318-5133-483e-bcc4-a264ce86216c.md  plan-sess_f44e8d91-37ca-4a24-858b-bf51bff42e14.md
config/: README.md  capability_adapters.yaml
config/agents/: code_reviewer_agent.yaml  complete_agent_001.yaml
config/evaluation/: evaluation_metrics.yaml
config/evaluation_metrics/: bash_check.yaml  file_check.yaml  human_review.yaml  semantic_check.yaml
config/external_tools/: default.yaml  godot.yaml  vscode.yaml
config/isolation/: approval.yaml  isolation_config.yaml  isolation_policy.yaml  security_rules.yaml
config/media_workflows/: default_txt2img.json
config/models/: asr.yaml  embedding.yaml  llm.yaml  media_providers.yaml
config/modules/: task-manager.yaml
config/pipelines/: README.md  default.yaml  l1-main.yaml  l2-evaluator.yaml  l2-subtask.yaml
config/processes/: implementation_thinking.md  orchestrator_three_phase_pattern.md  requirement_structuring.md
config/rules/: backend_rules.md  code_style_rules.md  coding_context_rules.md  dispatcher_rules_exec.md  document_context_rules.md  execution_review_rules.md  frontend_rules.md  information_integrity_rules.md  isolation_network_rules.md  python_type_hints.md  testing_rules.md
config/searxng/: settings.yml
config/system/: api_config.yaml  concurrency_config.yaml  context_window_config.yaml  editor_config.yaml  long_term_task.yaml  memory_storage.yaml  rate_limit_config.yaml
config/templates/: .agent_template_spec.yaml  _template_spec.md  code_analysis_report_template.md  constitution_template.md  domain_migration_guide.md  domain_orchestrator_template.yaml  environment_status_template.md  execution_report_template.md  plan_template.md  plugin_test_template.md  programming_execution_report_template.md  research_report_template.md  resource_generation_report_template.md  solution_template.yaml  test_code_template.md  tool_code_template.md
config/tools/: _config.yaml  bash_tool.yaml  builtin_tools_config.yaml  capability_adapters.yaml  middleware_config.yaml
docker/agentos/: Dockerfile  Dockerfile.snapshot
docker/searxng/: docker-compose.yml  settings.yml
docs/: .gitignore  ARCHITECTURE.md  vision.md
docs/guides/: ai_coding_master_spec.md  ci_cd_pipeline_guide.md  diagnose_frontend_jank.md  plugin_development_guide.md  plugin_development_standard.md  streamdown_usage.md  theme-customization.md
electron/: main.ts  preload.ts  tray.ts  tsconfig.json  window-info.ts
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_baseline.txt  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  prettier.config.js  server.py  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.config.ws-integration.ts
frontend/public/: inject.html
frontend/scripts/: patch-lobehub-ui.mjs
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/tests/: conftest.py  test_server_proxy.py
mcp-servers/bing-search/: mcp.json  server.py
mcp-servers/demo-tools/: mcp.json  server.py
mcp-servers/web-search-mcp/: mcp.json  package-lock.json
scripts/: agent_prompt_viewer.py  backfill_subtask_inherited_isolated.py  check_frontend_baseline.py  check_mypy_baseline.py  check_test_batch_baseline.py  check_theme_contrast.py  diag_create_session.py  fix_restart_dirty_tasks.py  searxng_config.py
skills/code-backend/: SKILL.md
skills/code-debug/: SKILL.md
skills/code-frontend/: SKILL.md
skills/code-implement/: SKILL.md
skills/code-self-review/: SKILL.md
skills/resource-agent-create/: SKILL.md
skills/resource-theme-create/: SKILL.md
skills/resource-tool-create/: SKILL.md
src/: application.py  auto_confirm_runner.py
tests/: conftest.py  e2e_task_submit.yaml  e2e_time_agent.yaml  test_agent_config_fix.py  test_agent_fallback_disabled.py  test_approval_policy_source.py  test_ar1_memory_store_protocol.py  test_ar2_tool_context_bridge.py  test_asr_service.py  test_bug_fixes.py  test_bugfix_tool_registration_and_workspace_path.py  test_comfyui.py  test_config_center.py  test_config_management.py  test_container_state_bugfix.py  test_cross_domain_discovery.py  test_dead_code_cleanup.py  test_delete_task_cascade_pipeline.py  test_desktop_notification.py  test_directory_generator.py  test_drain_finalize_business_error.py  test_duplicate_check_merge.py  test_empty_message_fix.py  test_enhanced_search_boundary.py  test_exec_process_tree.py  test_execution_record_storage.py  test_external_chat.py  test_external_project_e2e.py  test_file_read_fields_filter.py  test_file_split_imports.py  test_fix_20260422_context_overflow.py  test_frontend_event_stream.py  test_host_mode_security.py  test_import_integrity.py  test_isolation_buildkit_cache_corruption.py  test_isolation_concurrent_create.py  test_isolation_container_self_heal.py  test_isolation_docker_recheck.py  test_isolation_docker_timeout.py  test_isolation_fallback.py  (+99 more)
(+1509 files in other folders)
